package io.skillia.dto.main;

import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
import io.skillia.persistence.entity.SkillTag;
import jakarta.validation.constraints.NotBlank;
import jakarta.validation.constraints.NotEmpty;
import jakarta.validation.constraints.NotNull;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;
import lombok.experimental.Accessors;

import java.io.Serializable;

/**
 * DTO for {@link SkillTag}
 */
@Data
@AllArgsConstructor
@NoArgsConstructor
@Builder
@Accessors(chain = true)
@JsonIgnoreProperties(ignoreUnknown = true)
public class SkillTagDto implements Serializable {
    private Long id;
    @NotNull
    @NotEmpty
    @NotBlank
    private String name;
}