package io.skillia.persistence.entity;

import jakarta.persistence.*;
import jakarta.validation.constraints.NotBlank;
import jakarta.validation.constraints.NotNull;
import lombok.*;
import lombok.experimental.Accessors;
import org.checkerframework.checker.nullness.qual.NonNull;
import org.checkerframework.checker.nullness.qual.Nullable;
import org.hibernate.annotations.OnDelete;
import org.hibernate.annotations.OnDeleteAction;

import java.util.LinkedHashSet;
import java.util.Objects;
import java.util.Set;

@Getter
@Setter
@Accessors(chain = true)
@AllArgsConstructor
@NoArgsConstructor(force = true)
@Builder(toBuilder = true)
@Entity
@Table(name = "skill")
public class Skill {
    // DB ID problem -> Nullable when saving, NonNull when saved :)
    // Using @NonNull gets very tricky -> get rid of it
    @NotNull
    @Id
    @GeneratedValue(strategy = GenerationType.SEQUENCE, generator = "skill_id_gen")
    @SequenceGenerator(name = "skill_id_gen", sequenceName = "skill_id_seq", allocationSize = 1, initialValue = 50)
    @Column(name = "id", nullable = false)
    private Long id;

    //    @NonNull
    @NotBlank
    @Column(name = "name", nullable = false, unique = true, length = 70)
    private String name;

    @Nullable
    @Column(name = "description", length = 250)
    private String description;

    // Delete rule -> deleting a skill or a tag should delete the related record of the join table
    @OnDelete(action = OnDeleteAction.CASCADE)
    @NotNull
    @ManyToMany(fetch = FetchType.EAGER)    // Avoid LazyInitializationException errors when doing dto mapping
    @JoinTable(
        name = "skill_tagging",
        joinColumns = @JoinColumn(name = "skill_id", foreignKey = @ForeignKey(name = "FK__skill_tagging__skill")),
        inverseJoinColumns = @JoinColumn(name = "tag_id", foreignKey = @ForeignKey(name = "FK__skill_tagging__tag")),
        indexes = @Index(name = "IDX__skill_tagging__skill_id", columnList = "skill_id")
    )
    @Builder.Default
    private Set<SkillTag> tags = new LinkedHashSet<>();

    public Skill(@NonNull Long id) {
        this.id = Objects.requireNonNull(id);
    }
}