%%{init: {'theme':'neutral'}}%%
classDiagram
%%    direction LR
    class Department {
        + id: Long
        + name: String
        + people: Person[]
        + skillGroups: SkillGroup[]
    }

    class SkillGroup {
        + id: Long
        + name: String
        + description: String
        + skills: Skill[]
    }

    class Skill {
        + id: Long
        + name: String
        + description: String
        + tags: SkillTag[]
    }

    class SkillTag {
        + id: Long
        + name: String
    }

    class Person {
        + username: String
        + fullName: String
        + email: String
        + title: String
        + department: String
        + personSkills: AcquiredSkill[]
    }

    class AcquiredSkill {
        + level: Integer
        + skill: Skill
        + modifiedAt: Date
    }

    Department "1" *--> "*" Person: people
    Department "*" o--> "*" SkillGroup: skillGroups
    SkillGroup "*" o--> "*" Skill: skills
    Person "1" *--> "*" AcquiredSkill: personSkills
    %% Reference from AcquiredSkill to Person omitted as present on the model rather for ORM purposes
    %% The only usage of that relation comes from the skill matrix, retrieving all AcquiredSkill to finally build a Person with its acquired skills
    AcquiredSkill "*" --> "1" Skill: skill
    Skill "*" o--> "*" SkillTag: tags